--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <div class="home__data">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">vimal</span><br>Web <span class="home__title-color">D</span>eveloper <br>Web Designe<span class="home__title-color">r</span> </h1>
 
-                <a href="#" class="button">Contact</a>
+                <a href="#contact" class="button">Contact</a>
             </div>
 
             <div class="home__social">
-                <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.linkedin.com/in/vimal-s-554727250/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="mailto:vimalshanmugam007@gmail.com" class="home__social-icon"><i class='bx bx-envelope'></i></a>
+                <a href="https://github.com/Vimalshanmugam" class="home__social-icon"><i class='bx bxl-github' ></i></a>
             </div>
 
             <div class="home__img">
