--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="home__data">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">vimal</span><br>Web <span class="home__title-color">D</span>eveloper <br>Web Designe<span class="home__title-color">r</span> </h1>
 
-                <a href="#contact" class="button">Contact</a>
+                <a href="mailto:vimalshanmugam007@gmail.com" class="button">Contact</a>
             </div>
 
             <div class="home__social">
@@ -72,7 +72,7 @@
                     
                 <div>
                     <h2 class="about__subtitle">I'm vimal</h2>
-                    <p class="about__text">A result-oriented professional willing to work as a software developer in a globally reputed company. I have a keen interest in web applications, animations, UIeffects. I am interested in developing dynamicapplications and Curiosity to learn new technologiesand independent worker with high attention to detail,self-motivated person and quick learner..</p>           
+                    <p class="about__text">Hi, I'm Vimal and I'm a full stack developer based in India. A result-oriented professional willing to work as a software developer in a globally reputed company. I have a keen interest in web applications, animations, UIeffects. I am interested in developing dynamicapplications and Curiosity to learn new technologiesand independent worker with high attention to detail,self-motivated person and quick learner..</p>           
                 </div>                                   
             </div>
         </section>
@@ -239,6 +239,7 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer">
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d394.2474628806521!2d78.12178936801203!3d11.631242211207853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1707140826941!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" Mylocation></iframe> -->
         <p class="footer__title">Vimal</p>
         <div class="footer__social">
             <a href="https://www.linkedin.com/in/vimal-s-554727250/" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
