some modified for index.html

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <div class="home__data">
                 <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">vimal</span><br>Web <span class="home__title-color">D</span>eveloper <br>Web Designe<span class="home__title-color">r</span> </h1>
 
-                <a href="mailto:vimalshanmugam007@gmail.com" class="button">Contact</a>
+                <a href="mailto:vimalshanmugam007@gmail.com" target="_blank" class="button">Contact</a>
             </div>
 
             <div class="home__social">
-                <a href="https://www.linkedin.com/in/vimal-s-554727250/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="mailto:vimalshanmugam007@gmail.com" class="home__social-icon"><i class='bx bx-envelope'></i></a>
-                <a href="https://github.com/Vimalshanmugam" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.linkedin.com/in/vimal-s-554727250/" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://mail.google.com/mail/u/1/#inbox?compose=new" target="_blank" class="home__social-icon"><i class='bx bx-envelope'></i></a>
+                <a href="https://github.com/Vimalshanmugam" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
             </div>
 
             <div class="home__img">
@@ -242,8 +242,8 @@
         <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d394.2474628806521!2d78.12178936801203!3d11.631242211207853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1707140826941!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" Mylocation></iframe> -->
         <p class="footer__title">Vimal</p>
         <div class="footer__social">
-            <a href="https://www.linkedin.com/in/vimal-s-554727250/" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
-            <a href="https://github.com/Vimalshanmugam" class="footer__icon"><i class='bx bxl-github' ></i></a>
+            <a href="https://www.linkedin.com/in/vimal-s-554727250/" target="_blank" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
+            <a href="https://github.com/Vimalshanmugam" target="_blank" class="footer__icon"><i class='bx bxl-github' ></i></a>
             <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
         </div>
     </footer>
