--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <i class='bx bxl-BOOTSTRAP skills__icon' ></i>
+                            <i class='bx bxl-github skills__icon' ></i>
                             <span class="skills__name">GITHUB,GIT</span>
                         </div>
                         <div class="skills__bar skills__html">
@@ -154,7 +154,7 @@
                 
                 <div class="skills__data">
                     <div class="skills__names">
-                        <i class='bx bxl-BOOTSTRAP skills__icon' ></i>
+                        <i class='bx bxl-bootstrap skills__icon' ></i>
                         <span class="skills__name">BOOTSTRAP</span>
                     </div>
                     <div class="skills__bar skills__js">
@@ -166,7 +166,7 @@
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
-                        <i class='bx bxl-BOOTSTRAP skills__icon' ></i>
+                        <i class='bx bxl-postman skills__icon' ></i>
                         <span class="skills__name">POSTMAN</span>
                     </div>
                     <div class="skills__bar skills__ux">
@@ -178,7 +178,7 @@
                 </div>
                 <div class="skills__data">
                     <div class="skills__names">
-                        <i class='bx bxl-BOOTSTRAP skills__icon' ></i>
+                        <i class='bx bxl-adobe-photoshop skills__icon' ></i>
                         <span class="skills__name">PHOTOSHOP</span>
                     </div>
                     <div class="skills__bar skills__js">
