modified:   index.html modified:   script.js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">vimal</span><br>Web <span class="home__title-color">D</span>eveloper <br>Web Designe<span class="home__title-color">r</span> </h1>
+                <h1 class="home__title">Hi,<br>I'm <span class="home__title-color">vimal</span><br>
+                    <span class="text first-text">W<span class="home__title-color">e</span>b</span>
+                    <!--Web--> <span class="home__title-colors"></span><!--eveloper--> <br><!--Web Designe--><span class="home__title-colors"><!--r--></span> </h1>
 
                 <a href="mailto:vimalshanmugam007@gmail.com" target="_blank" class="button">Contact</a>
                 <a href="https://drive.google.com/file/d/1R7QXfQz56XfHtqubS_0UbQTL4f-hlFXa/view?usp=drivesdk" target="_blank" class="button">Download Cv</a>
