modified:   index.html modified:   style.css

--- a/index.html
+++ b/index.html
@@ -204,24 +204,38 @@
             <h2 class="section-title">Work</h2>
 
             <div class="work__container bd-grid">
-                <a href="" class="work__img">
-                    <img src="img/work1.jpg" alt="">
+                <a href="https://fanta-web.netlify.app/" class="work__img">
+                    <button class="but">Project Link</button>
+                    <img src="img/work1.png" alt="">
+                    <p>Fanta Web Page</p>
                 </a>
-                <a href="" class="work__img">
-                    <img src="img/work2.jpg" alt="">
+                
+                <a href="https://menzee-product.netlify.app/" class="work__img">
+                    <button class="but">Project Link</button>
+                    <img src="img/work2.png" alt="">
+                    <p>Menzee-product</p>
                 </a>
-                <a href="" class="work__img">
-                    <img src="img/work3.jpg" alt="">
+                <a href="https://shoopingweb.netlify.app/" class="work__img">
+                    <button class="but">Project Link</button>
+                    <img src="img/work3.png" alt="">
+                    <p>Shoping Website Design Ecommerc</p>
                 </a>
-                <a href="" class="work__img">
-                    <img src="img/work4.jpg" alt="">
+                <a href="https://book-my-ticketss.netlify.app/" class="work__img">
+                    <button class="but">Project Link</button>
+                    <img src="img/work4.png" alt="">
+                    <p>Book My Ticket Website</p>
                 </a>
-                <a href="" class="work__img">
-                    <img src="img/work5.jpg" alt="">
+                <a href="https://quiz-web-apps.netlify.app/" class="work__img">
+                    <button class="but">Project Link</button>
+                    <img src="img/work5.png" alt="">
+                    <p>quiz-web-apps</p>
                 </a>
-                <a href="" class="work__img">
-                    <img src="img/work6.jpg" alt="">
+                <a href="https://responsive-animated-product.netlify.app/" class="work__img">
+                    <button class="but">Project Link</button>
+                    <img src="img/work6.png" alt="" width="440px" height="6656px">
+                    <p>Responsive-animated-product</p>
                 </a>
+                
             </div>
         </section>
 
@@ -247,8 +261,9 @@
         <div class="footer__social">
             <a href="https://www.linkedin.com/in/vimal-s-554727250/" target="_blank" class="footer__icon"><i class='bx bxl-linkedin' ></i></a>
             <a href="https://github.com/Vimalshanmugam" target="_blank" class="footer__icon"><i class='bx bxl-github' ></i></a>
-            <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+            <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a> 
         </div>
+        <p class="end">Copyright © 2024 Design By Vimal </p>
     </footer>
 
 
