--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <!--Web--> <span class="home__title-colors"></span><!--eveloper--> <br><!--Web Designe--><span class="home__title-colors"><!--r--></span> </h1>
 
                 <a href="mailto:vimalshanmugam007@gmail.com" target="_blank" class="button">Contact</a>
-                <a href="https://drive.google.com/file/d/1R7QXfQz56XfHtqubS_0UbQTL4f-hlFXa/view?usp=drivesdk" target="_blank" class="button">Download Cv</a>
+                <a href="https://drive.google.com/file/d/1cVqaT__J418k26rS0035teBZGCphubBS/view?usp=sharing" target="_blank" class="button">Download Cv</a>
             </div>
 
             <div class="home__social">
@@ -225,15 +225,15 @@
                     <img src="img/work4.png" alt="">
                     <p>Book My Ticket Website</p>
                 </a>
-                <a href="https://quiz-web-apps.netlify.app/" class="work__img">
+                <a href="https://travel-planners.netlify.app/" class="work__img">
                     <button class="but">Project Link</button>
                     <img src="img/work5.png" alt="">
-                    <p>quiz-web-apps</p>
+                    <p>Travel planners Website</p>
                 </a>
                 <a href="https://responsive-animated-product.netlify.app/" class="work__img">
                     <button class="but">Project Link</button>
                     <img src="img/work6.png" alt="" width="440px" height="6656px">
-                    <p>Responsive-animated-product</p>
+                    <p>Responsive animated product</p>
                 </a>
                 
             </div>
