modified:   index.html modified:   style.css

--- a/index.html
+++ b/index.html
@@ -205,34 +205,40 @@
 
             <div class="work__container bd-grid">
                 <a href="https://fanta-web.netlify.app/" class="work__img">
-                    <button class="but">Project Link</button>
+                    <button class="but">Project URL</button>
                     <img src="img/work1.png" alt="">
+                    <button class="buts">GitHub</button>
                     <p>Fanta Web Page</p>
                 </a>
                 
                 <a href="https://menzee-product.netlify.app/" class="work__img">
-                    <button class="but">Project Link</button>
+                    <button class="but">Project URL</button>
                     <img src="img/work2.png" alt="">
+                    <button class="buts">GitHub</button>
                     <p>Menzee-product</p>
                 </a>
                 <a href="https://shoopingweb.netlify.app/" class="work__img">
-                    <button class="but">Project Link</button>
+                    <button class="but">Project URL</button>
                     <img src="img/work3.png" alt="">
+                    <button class="buts">GitHub</button>
                     <p>Shoping Website Design Ecommerc</p>
                 </a>
                 <a href="https://book-my-ticketss.netlify.app/" class="work__img">
-                    <button class="but">Project Link</button>
+                    <button class="but">Project URL</button>
                     <img src="img/work4.png" alt="">
+                    <button class="buts">GitHub</button>
                     <p>Book My Ticket Website</p>
                 </a>
                 <a href="https://travel-planners.netlify.app/" class="work__img">
-                    <button class="but">Project Link</button>
+                    <button class="but">Project URL</button>
                     <img src="img/work5.png" alt="">
+                    <button class="buts">GitHub</button>
                     <p>Travel planners Website</p>
                 </a>
                 <a href="https://responsive-animated-product.netlify.app/" class="work__img">
-                    <button class="but">Project Link</button>
-                    <img src="img/work6.png" alt="" width="440px" height="6656px">
+                    <button class="but">Project URL</button>
+                    <img src="img/work6.png" alt="" ">
+                    <button class="buts">GitHub</button>
                     <p>Responsive animated product</p>
                 </a>
                 
